<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

  >
  <PreferenceCategory android:title="@string/main_settings">
    <CheckBoxPreference
      android:defaultValue="true"
      android:key="@string/key_notifications"
      android:summaryOff="@string/notifications_disabled"
      android:summaryOn="@string/notifications_enabled"
      android:textColor="@color/colorPrimaryDark"
      android:title="@string/notifications_title"

      />
    <ListPreference
      android:defaultValue="@string/choose_week_title"
      android:entries="@array/week_selection"
      android:entryValues="@array/week_selection"
      android:key="@string/key_current_week"
      android:summary="@string/current_week"
      android:title="@string/choose_week_title" />

    <Preference
      android:key="@string/key_reload"
      android:title="@string/title_reload_schedule" />
  </PreferenceCategory>
  <Preference
    android:key="@string/key_go_to_market"
    android:title="@string/go_to_market">
    <intent
      android:action="android.intent.action.VIEW"
      android:data="@string/url_to_playstore" />
  </Preference>

</PreferenceScreen>