<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">


  <androidx.appcompat.widget.Toolbar
    android:id="@+id/day_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:title="@string/app_name"
      app:titleTextColor="@color/colorWhite" >

  </androidx.appcompat.widget.Toolbar>

  <ScrollView
      android:id="@+id/scrollView2"
      android:layout_width="match_parent"
      android:layout_height="0dp"

      android:background="@color/primary"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/day_toolbar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/tv1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:text="@string/week1_adapter_name"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginBottom="12dp"
          android:text="@string/week2_adapter_name"
          app:layout_constraintBottom_toTopOf="@+id/week2"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/week1" />

      <androidx.gridlayout.widget.GridLayout
          android:id="@+id/week1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:background="@color/primary"
          app:columnCount="3"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHeight_percent="0.5"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv1"
          app:rowCount="3"
          app:useDefaultMargins="true">

      </androidx.gridlayout.widget.GridLayout>

      <androidx.gridlayout.widget.GridLayout
          android:id="@+id/week2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="16dp"
          android:background="@color/primary"
          app:columnCount="3"
          app:layout_constraintBottom_toBottomOf="parent"

          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHeight_percent="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView5"
          app:rowCount="3"
          app:useDefaultMargins="true">

      </androidx.gridlayout.widget.GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

  <ImageView
      android:id="@+id/search_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="8dp"
      app:srcCompat="@drawable/ic_search_black_24dp"
      android:tint="@color/colorWhite"
      app:layout_constraintBottom_toTopOf="@+id/scrollView2"
      app:layout_constraintEnd_toEndOf="@+id/day_toolbar"
      app:layout_constraintTop_toTopOf="@+id/day_toolbar"
      app:layout_constraintVertical_bias="1.0" />

  <ImageView
      android:id="@+id/settings"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginBottom="8dp"
      android:tint="@color/colorWhite"
      app:layout_constraintBottom_toTopOf="@+id/scrollView2"
      app:layout_constraintEnd_toStartOf="@+id/search_button"
      app:layout_constraintTop_toTopOf="@+id/day_toolbar"
      app:layout_constraintVertical_bias="0.952"
      app:srcCompat="@drawable/ic_settings" />
</androidx.constraintlayout.widget.ConstraintLayout>